# RPS

./: Cargo.toml  README.md  README.md_copy  center_elements.rs  rustfmt.toml
examples/AdvancedExample/: build.rs  demo.rs
examples/AdvancedExample/actions/: buttons_actions.rs  mod.rs
examples/AdvancedExample/system/: mod.rs  setup_page_data.rs
examples/AdvancedExample/ui/: pages.rs  style.rs
examples/DockExample/: demo.rs
examples/SimpleExample/: build.rs  demo.rs
src/: build.rs  buttons.rs  input_handler.rs  lib.rs  main.rs  pages.rs  sdl3_generators.rs  window.rs
src/actions/: buttons_actions.rs
src/misc/: center_elements.rs  list_embedded.rs  mod.rs  vec.rs
src/sdl/: mod.rs  sdl3_generators.rs
src/system/: input_handler.rs  mod.rs  page_system.rs  renderer.rs  scene_transition.rs  state.rs  wayland_layer_shell.rs  window.rs
src/tests/: app_state_tests.rs  mod.rs
src/ui/: mod.rs  pages.rs  style.rs
tests/: app_state_tests.rs  setup_tests.rs
