[package]
name = "page_system"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[profile.dev]
incremental = true

[profile.release]
incremental = false

[dependencies]
display-info = "0.5.7"
fontconfig = "0.10.0"
sdl3 = { version = "0.15.1", features = ["build-from-source", "ttf", "image"] }

