[package]
name = "rps"
version = "0.1.0"
edition = "2024"

[lib]
name = "rps"
path = "src/lib.rs"

[[example]]
name = "AdvancedExample"
path = "examples/AdvancedExample/demo.rs"
[[example]]
name = "SimpleExample"
path = "examples/SimpleExample/demo.rs"

[dependencies]
display-info = "0.5.7"
fontconfig = "0.10.0"
sdl3 = { version = "0.15.1", features = ["build-from-source", "ttf", "image"] }

